# CUDAConv

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.md  image_loader  image_loader.cpp  imreader  imreader.cpp  main.cpp  stats.md
conv/: conv.cpp  conv.hpp
helpers/: create_video.py  extract_frames.py
image_loader/: image_loader.cpp  image_loader.hpp
old/: Makefile  imreader.cpp
